Thu Jul 19 14:30:43 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h: move mark function declarations that should be private.

Thu Jul 19 14:18:22 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/init.c (rsock_init_sock): need to update max fd on all
	  platforms.

Thu Jul 19 14:15:48 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_gc_mark_threads): remove deprecated function.

Thu Jul 19 13:28:03 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/net/http/test_http.rb (TestNetHTTPLocalBind#test_bind_to_local*):
	  re-enable the tests because now it's OK on windows.

Thu Jul 19 13:26:25 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: now enable IPv6 by default on mswin.

Thu Jul 19 09:33:46 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/emitter.c (initialize): allow a configuration object to be
	  passed to the constructor so that mutation isn't required after
	  instantiation.

	* ext/psych/lib/psych/handler.rb: add configuration object

	* ext/psych/lib/psych/visitors/emitter.rb: use configuration object if
	  extra configuration is present.

Thu Jul 19 08:20:25 2012  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_file.rb: remove temporally files early.

Thu Jul 19 07:37:41 2012  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/drbtest.rb: fixed: can't delete unix domain sockets problem.

Thu Jul 19 03:41:20 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* bignum.c: Added #include <strings.h> for ffs(). Patch by Perry
	  Smith. Thank you. [Bug #6748]

Thu Jul 19 01:56:02 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/intern.h (rb_num_zerodiv): Added NORETURN.
	  Patched by Xi Wang. [Bug #6736]

Wed Jul 18 23:57:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_pack): round down too long uuencode width.  folding
	  width in uuencode format cannot be longer than 63 bytes.

Wed Jul 18 23:04:18 2012  NARUSE, Yui  <naruse@ruby-lang.org>
